fixed padding for about section on small screen

--- a/style.css
+++ b/style.css
@@ -837,7 +837,7 @@ footer {
     }
 
     .aboutMeInfo {
-        padding: 2rem 5rem;
+        padding: 2rem 3rem;
     }
 
     .banner_links {
